<resources>
    <string name="app_name">HillsLoungeApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hills_lounge_loyalty">Hills Lounge Loyalty</string>
    <string name="main_fragment_title">Главная</string>
    <string name="Label_profile">Профиль</string>
    <string name="settings">Settings</string>
    <string name="UserImageView">UserImageView</string>
    <string name="user_name">User name</string>
    <string name="UserNumber">+79123456789</string>
    <string name="cashbackLevel">Уровень cashback:</string>
    <string name="supportText">Support</string>
    <string name="pushSettings">settings</string>
    <string name="loyalty">loyalty</string>
    <string name="aboutApp">AboutApp</string>
    <string name="login_screen_title">Регистрация\n</string>
    <string name="username_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Авторизоваться\n</string>
    <string name="registration_button_text">Нет аккаунта?</string>
    <string name="forgot_password_button_text">Забыли пароль?</string>
    <string name="registration_screen_title">Регистрация</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="name_hint">Ваше имя</string>
    <string name="birthdate_hint">Дата рождения</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="createAccount">Нет аккаунта?</string>
    <string name="resetPassword">Забыли пароль?</string>
    <string name="Enter">Войти</string>
    <string name="enterPasswordHint">Введите пароль</string>
    <string name="enterLoginHint">Введите логин</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="enterNumberHint">Введите номер телефона</string>
    <string name="enterNameHint">Введите Ваше имя</string>
    <string name="registrationTitle">Регистрация</string>
    <string name="fcm_message">Test string</string>
    <string name="default_notification_channel_id">default notification channel id</string>

    <string-array name="cat_names">
        <item>Рыжик</item>
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Мурка</item>
        <item>Васька</item>
        <item>Томасина</item>
        <item>Кристина</item>
        <item>Пушок</item>
        <item>Дымка</item>
        <item>Кузя</item>
        <item>Китти</item>
        <item>Масяня</item>
        <item>Симба</item>
    </string-array>
</resources>