<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationTitle"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/create_me_a_logo_for_a_place_called_hills_lounge_logo_1ee78d9e"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterNameHint"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        android:layout_margin="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

<!--    <EditText-->
<!--        android:id="@+id/editTextSecondName"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:hint="Введите Вашу фамилию"-->
<!--        android:inputType="text"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/editTextFirstName"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        />-->

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterNumberHint"
        android:inputType="phone"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
        android:layout_margin="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterPasswordHint"
        android:inputType="textPassword"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber"
        android:layout_margin="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterPasswordHint"
        android:inputType="textPassword"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_margin="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/light_black"

        android:textSize="22sp"
        android:text="@string/registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
        android:layout_marginTop="25dp"
        />
<!--    android:onClick="onRegistrationClick"-->

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Есть аккаунт? Войти"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="normal"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegistration"
        android:layout_marginTop="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>