<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_variant"
    tools:context=".Profile.ProfileFragment">

    <ScrollView
        android:id="@+id/profileFragment_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileFragment_mainConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <LinearLayout
                android:id="@+id/profileFragment_LinearLayout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/profileFragment_LinearLayout_titile_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="@string/Label_profile"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/fragment_home_imageButton"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/image_buttons_border"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/exit" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profileFragment_LinearLayout_userBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/profileFragment_LinearLayout_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileFragment_userImg"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/UserImageView"
                    android:src="@drawable/create_me_a_logo_for_a_place_called_hills_lounge_logo_1ee78d9e"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:civ_border_width="3dp"
                    app:civ_border_color="@color/mainColor"/>

                <TextView
                    android:id="@+id/profileFragment_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="28sp"
                    android:textColor="@color/accentColor"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toEndOf="@+id/profileFragment_userImg"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/profileFragment_userTelephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="24sp"
                    android:textColor="@color/textColor"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/profileFragment_userName"
                    app:layout_constraintStart_toEndOf="@+id/profileFragment_userImg"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/profileFragment_cashbackLvl_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cashbackLevel"
                android:textColor="@color/accentColor"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/profileFragment_LinearLayout_userBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp" />

            <!-- TODO -->
            <SeekBar
                android:id="@+id/profileFragment_SeeckBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profileFragment_cashbackLvl_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/accentColor"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <!-- TODO -->
            <TextView
                android:id="@+id/tvAchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Достижения:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileFragment_SeeckBar"
                android:layout_margin="15dp"
                android:textSize="24sp"
                android:textColor="@color/textColor"
                />
            <View
                android:id="@+id/profileFragment_achiveBox"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/accentColor"
                app:layout_constraintTop_toBottomOf="@id/tvAchive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:id="@+id/support_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="clip_vertical"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileFragment_achiveBox"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/free_icon_problem_6570266"
                    app:tint="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Поддержка"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingsPushes_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="clip_vertical"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/support_section"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_background">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/free_icon_alarm_6803380"
                    app:tint="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Настройка уведомлений"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loyalty_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="clip_vertical"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settingsPushes_section"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_background">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/free_icon_star_6583128"
                    app:tint="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="О программе лояльности"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutApp_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="clip_vertical"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loyalty_section"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_background">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/free_icon_info_6583141"
                    app:tint="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="О приложении"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>







        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>